[package]
name = "xml_sax"
version = "0.0.2"
authors = ["Fatih Pense <fatihpense@gmail.com>"]

description = "A convenient XML SAX interface which can have several implementations. Current implementations: xml_oxide."
repository = "https://github.com/fatihpense/rust_xml_sax"
keywords = ["XML", "SAX", "parser"]
categories = ["parsing"]
license = "MIT"

[dependencies]
